# ml-traductores-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FASE_0_TAREAS.md  PLAN_IMPLEMENTACION.md  docker-compose.yml  pyproject.toml  reset-db.py  run_local.py
.claude/: settings.local.json
agent-old-dontlook/: langgraph.json  pyproject.toml
agent-old-dontlook/cotizacion-generator/: SKILL.md
agent-old-dontlook/cotizacion-generator/assets/: Formato_Cotizaciones_v2.docx
agent-old-dontlook/cotizacion-generator/scripts/: generar_cotizacion.py
agent-old-dontlook/src/chatbot/: chatbot_config.yaml  config.py  graph.py  nodes.py  prompt_loader.py  prompts.py  state.py
agent-old-dontlook/src/chatbot/logging/: __init__.py  config.py  context.py  graph_logging.py
agent-old-dontlook/src/chatbot/prompts/: chatbot_system.md
agent-old-dontlook/src/chatbot/skills/: cotizacion.md  info_servicios.md  seguimiento.md
agent-old-dontlook/src/chatbot/tools/: __init__.py  cotizacion_tool.py  create_quote.py  get_pricing.py  get_services.py  load_skill.py  solicitud_tool.py
alembic/: alembic.ini  env.py  script.py.mako
alembic/versions/: 95c3bb1ecdcc_initial_schema.py  a1b2c3d4e5f6_add_rut_and_billing_fields_to_clientes.py  b2c3d4e5f6a7_add_numero_orden_compra_to_cotizaciones.py  c3d4e5f6a7b8_add_incluir_terminos_corporativos.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  types.ts  utils.ts
scratch/: verify_doc_gen.py
scripts/: actualizar_precios_interpretacion.py  reset_conversations.py  reset_db.py
sql_reference/: 01_core.sql  02_panel.sql
src/: config.py  main.py
src/agent/: graph.py  nodes.py  orchestrator.py  phase_detector.py  state.py
src/api/: cron.py  dashboard.py  webhooks.py
src/db/: engine.py  models.py
src/llm/: anthropic_provider.py  router.py  (+1 more)
(+63 files in other folders)
