[project]
name = "ml-traductores-agent"
version = "0.1.0"
description = "Agente comercial IA para ML Traductores"
requires-python = ">=3.12"
dependencies = [
    # --- Framework web ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # --- Base de datos ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # --- IA: Claude + LangGraph + LangSmith ---
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.21",
    "langsmith>=0.1.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1",

    # --- Generación de documentos ---
    "python-docx>=1.1.0",

    # --- AWS ---
    "boto3>=1.34.0",

    # --- HTTP client async ---
    "httpx>=0.27.0",

    # --- Email SMTP async ---
    "aiosmtplib>=3.0",

    # --- Scheduler para seguimientos ---
    "apscheduler>=3.10.0",

    # --- Utilidades ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
