[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-traductores-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.10,<2",
    "langgraph-cli[inmem]>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=1.4.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]
